--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.3.1",
     "typescript": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.3.22"
   }
 }
